// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-cta/Button renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 32.5,
        },
        Array [
          Object {
            "color": "#FFF",
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#F54D3D",
          "fontFamily": "Inter-Bold",
          "fontSize": 27,
          "lineHeight": 32.5,
        },
        Array [
          Object {
            "color": "#FFF",
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 47.5,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 9,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 47.5,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 9,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="20"
      width="20"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 18,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 71.5,
      "opacity": 1,
      "paddingHorizontal": 47.5,
      "paddingVertical": 18,
    }
  }
/>
`;
